old/k8s/overlays/pr-template/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
spec:
  ingressClassName: nginx
  rules:
    - host: pr-${PR_NUMBER}-metrics-api.home.adammihajlovic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics
                port:
                  number: 5001
    - host: pr-${PR_NUMBER}-mobilitysoft-api.home.adammihajlovic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilitysoft
                port:
                  number: 5002
